add test matrix for the brute force GPU implementations

--- a/GPU_bruteforce/README
+++ b/GPU_bruteforce/README
@@ -1,13 +1,15 @@
 This directory contains a brute force GPU implementation of the L and Lk matrix norms, for reference.
 
+M36x36.txt is a test matrix for the programs.
+
 Compilation (needs the nvcc Nvidia cuda compiler):
 
     nvcc -o L1_str_que_int_mtx L1_str_que_int_mtx.cu
 
     nvcc -o L2_str_que_int_mtx L2_str_que_int_mtx.cu
 
-Usage:
+Example usage:
 
-    ./L1_str_que_int_mtx FILENAME    
+    ./L1_str_que_int_mtx M36x36.txt
 
-    ./L2_str_que_int_mtx FILENAME    
+    ./L2_str_que_int_mtx M36x36.txt
