--- a/GPU_bruteforce/README
+++ b/GPU_bruteforce/README
@@ -1,16 +1,15 @@
-This directory contains a brute force GPU implementation of the L and Lk matrix norms, for reference.
-The first tag of the filename of the code shows which L norm the code is developed to calculate for a given matrix. For example the L1_str_red_calc_int_mtx.cu is developed to determine the L1 norm of a matrix.
+This directory contains a brute-force GPU implementation of the Lk matrix norms.
 
-M36x36.txt is a test matrix for the programs.
+## Basic usage
 
-Compilation (needs the nvcc Nvidia cuda compiler):
+The compilation (needs the nvcc Nvidia CUDA compiler) and can be compiled with the following command:
 
-    nvcc -o L1_str_que_int_mtx L1_str_que_int_mtx.cu
+        nvcc -o L L.cu
 
-    nvcc -o L2_str_que_int_mtx L2_str_que_int_mtx.cu
+The compiled code can be invoked with the
 
-Example usage:
+        ./L num filename_of_matrix
 
-    ./L1_str_que_int_mtx M36x36.txt
+command, where 'num' is a positive integer indicating the order of the L norm we want the code to calculate. The 'filename_of_matrix' is the name of the file containing the matrix. The maximal order of the L norm the code can calculate is defined in the 'RANK_OF_NORM' variable. If one wants to calculate an L norm of order bigger than what is defined by 'RANK_OF_NORM', then the 'RANK_OF_NORM' variable should be increased, and the code should be recompiled. The entries of the matrix must be integers. The data separator containing the matrix can be any kind of character apart from numeral, and any of the following characters: 'e', 'E', '.', '+', '-'. The 'length' variable defines the maximal number of columns of a matrix, the program can deal with in case the order of the L norm is bigger than one. If the order of the L norm is 1, the number of rows, or the number of columns (whichever is bigger) of the matrix can not be more than the 'length' variable. In case it is bigger, the 'length' variable should be increased, and the code should be recompiled.
 
-    ./L2_str_que_int_mtx M36x36.txt
+The program has 2 outputs. It writes out the L norm of the matrix to the screen. It also writes the strategy vector belonging to the L norm to a file. The filename has the following format: strategy_Lnum.txt, where num means the order of the L norm. For example, the file 'strategy_L2.txt' contains the strategy vector belonging to the L2 norm of the matrix. These files consists of \pm 1 in case the order is not bigger than 2. In case it is bigger than 2, the entries of the strategy files are {0,1,...,num-1}, where num is the order of the L norm.
